--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+.game {
+  text-align: center;
+  font-size: 20px;
+}
+
+.button {
+  align-items: center;
+  justify-content: center;
+  height: 5vh;
+  font-size: 10px;
+}
+
+.image {
+  text-align: center;
+  height: 500px;
+  width: 900px;
+}
