--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,20 @@
   }
 }
 
+.RecordList {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  border-radius: 20px;
+  padding: 10px;
+  border: 4px solid #ccc;
+}
+
+.RecordList td {
+  padding: 8px;
+  text-align: left;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -37,20 +51,67 @@
   }
 }
 
+.form {
+  width: 180px;
+  height: 70px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  border-radius: 20px; /* Adjust the border-radius for rounded corners */
+  padding: 10px; /* Add padding for content spacing inside the form */
+  border: 4px solid #ccc; /* Optional: Add a border for visual separation */
+}
+
 .game {
+  background-color: navajowhite;
   text-align: center;
   font-size: 20px;
+  font-weight: bold;
+  border-radius: 20px;
+  padding: 10px;
+  border: 7px solid #ccc; /* Optional: Add a border for visual separation */
+}
+
+.display {
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
+  height: auto;
+  border-radius: 20px;
+  padding: 10px;
+  border: 4px solid #ccc; /* Optional: Add a border for visual separation */
+}
+
+.phrase {
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
+  height: auto;
+  border-radius: 20px;
+  padding: 10px;
+  border: 4px solid #ccc; /* Optional: Add a border for visual separation */
 }
 
 .button {
   align-items: center;
   justify-content: center;
-  height: 5vh;
-  font-size: 10px;
+  height: 2.9vh;
+  font-size: 20px;
+  margin: 0 10px;
+  border: 2px solid #ccc; /* Optional: Add a border for visual separation */
+  border-radius: 7px;
+}
+
+.user {
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
+  height: auto;
+  border-radius: 20px;
+  padding: 10px;
+  border: 4px solid #ccc; /* Optional: Add a border for visual separation */
 }
 
 .image {
   text-align: center;
-  height: 500px;
-  width: 900px;
 }
